--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -5,11 +5,11 @@
   <body>
     <h1>Bienvenue sur le site de gossip de THP !</h1>
     <p>La liste des potins arrive bientôt, en attendant je tinvite à en créér un juste <a href = "/gossips/new/">ici</a> !</p>
-    <p> Elle est enfin là !, tu peux consulter la liste ici !</p>
-    <% gossips.each do |gossip| %>
+    <p> Elle est enfin là !, tu peux consulter la liste ci-dessous :</p>
+    <% gossips.each_with_index do |gossip, index| %>
       <p>
-        <%= gossip.author %><br/>
-        <%= gossip.content %>
+        <a href = 'gossips/<%= index + 1 %>/' >Potin n°<%= index + 1 %></a><br>
+        écrit par <%= gossip.author %><br/> 
       </p>
     <% end %>
   </body>
