--- a/lib/views/edit.erb
+++ b/lib/views/edit.erb
@@ -5,7 +5,7 @@
   <body>
     <h1>Modifie ce potin !</h1>
     <p>Edition via le formulaire ci-dessous</p>
-    <form action='/gossips/:id/edit/' method='POST'>
+    <form action="/gossips/<%= id %>/edit/" method="POST">
       Saisi ici ton nom :  <input type='text' name='gossip_author'/><br/>
       Balance ton nouveau potin : <input type='text' name='gossip_content'/><br/>
       <input type='submit'/>
